{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 238,
  "lineage": "7a73a600-06d1-5050-1b19-f1db1ece7521",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093879445146:security-group/sg-0741880eba69743ce",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0741880eba69743ce",
            "ingress": [],
            "name": "demo-sg",
            "name_prefix": "",
            "owner_id": "093879445146",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-23fe4e59"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1059426202",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0741880eba69743ce",
            "security_group_rule_id": "sgr-01c4fd00468b746bd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.example"
          ]
        }
      ]
    }
  ]
}